site/style.css
body {
    background: rgb(25, 25, 25);
    color: rgba(255, 255, 255, 0.81);
    padding: 0;
    margin: 0;
    font: 16px/1.62 "Helvetica", "Helvetica Neue", arial, sans-serif;
}
h1 {
    margin-top: 0;
    font-size: 28px;
}
h2 {
    font-size: 22px;
    margin: 45px 0 15px;
}
h3 {
    font-size: 18px;
    margin: 30px 0 10px;
}

/* block level */
blockquote {
    border-left: 0.4em solid #ddd;
    margin: 15px 0;
    padding: 0 15px;
}
blockquote blockquote {
    padding: 0 0 0 1em;
    margin-left: 2em;
    border-left: 0.4em solid #ddd;
}
p {
    font-weight: normal;
    line-height: 1.8;
    margin: 20px 0;
}

.footnotes { font-size: 90%; }

hr {
    border: none;
    border-bottom: 1px solid #dadada;
}

ul, ol {
    margin: 14px 0;
    padding-left: 30px;
}
ul {
    list-style: square;
}
li ul {
    list-style: disc;
    margin: 8px 0;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    border-color: #333;
}
table tr:nth-child(2n) {
    background: rgba(135, 131, 120, 0.15);
}
table th, table td {
    text-align: left;
    padding: 4px 6px;
}
/* span level */
img {
    max-width: 100%;
}
a {
    color: #3984B3;
    overflow: hidden;
    word-wrap: break-word;
    border-bottom: 1px dotted #ddd;
    border-bottom: 1px dotted rgba(0,0,0,0.2);
}
a:hover {
    color: #45B7FF;
    cursor: pointer;
    -webkit-transition: color .5s ease;
    -moz-transition: color .5s ease;
    transition: color .5s ease;
}
a img {
    vertical-align: middle;
}

/* code */
pre, code, tt {
    font: 0.8em "Menlo", monospace;
    border: 1px solid #333;
    border-radius: 3px;
}
pre {
    margin: 1em 0;
    padding: 8px;
    line-height: 1.5em;
    overflow: auto;
}
code, tt {
    color: #FF5E5E;
    background-color: rgba(135, 131, 120, 0.15);
    border-radius: 3px;
    padding: 1px 3px;
    font-size: 0.75em;
}
pre code {
    padding: 0;
    color: rgba(255, 255, 255, 0.81);
    border: none;
    background: inherit;
    font-size: inherit;
}

::selection {
    background: #FF5E5E;
    color: #fff;
}
header, nav, main, footer {
    max-width: 768px;
    *width: 768px;
    margin: 0 auto;
}
main {
    padding: 20px;
}

h2#brand {
    margin-top: 20px;
    font-size: 26px;
}

h2#brand:before {
    content: "\2190";
}

#brand a {
    color: #999;
    border-bottom: 0 none;
}
#brand a:hover {
    color: #444;
}

nav {
    text-align: center;
    position: relative;
    height: 46px;
    zoom: 1;
    z-index: 9;
}

nav a {
    font-weight: bold;
    margin-right: 6px;
    padding: 8px 10px;
    line-height: 46px;
    border-bottom: 0 none;
}

footer {
    text-align: center;
    padding: 20px;
    margin-bottom: 30px;
    color: #999;
    font-size: 12px;
}
footer a {
    margin: 0;
    color: #999;
}

/* article */
main time {
    color: #999;
    font-size: 14px;
}

.timeline time {
    margin: 0.1em 1em 0.1em 0;
    display: inline-block;
    min-width: 72px;
    text-align: right;
}

.timeline li {
    margin: 12px 0;
    list-style: none;
    zoom: 1;
}

.timeline p {
    margin: 0;
    padding: 0;
}

/* syntax highlighting */
.code .builtin, pre .nb {
    color: #FF5E5E;
}

.code .keyword, pre .k {
    color: #FFFD78;
}

.code .literal.string, pre .s2 {
    color: #90FF52;
}

/* styles used by articles */
.align-left { float: left }
.align-right { float: right }

